# nia-todo

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  install.sh  package-lock.json  package.json  requirements.txt  start.sh
api/: change_admin_password.py  db.py  errors.py  main.py  migrate.py  paths.py  rate_limit.py  run_server.py  set_trusted_proxies.py
api/data/: .gitkeep
api/middleware/: dynamic_cors.py  security.py
api/migrations/: 001_initial_schema.sql  002_add_project_parent_id.sql  003_add_user_support.sql  004_add_jwt_support.sql  005_add_admin_token_version.sql  006_add_api_keys.sql  007_add_audit_log.sql  008_add_section_updated_at.sql  009_add_push_subscriptions.sql  010_add_user_id_to_reminders.sql  011_add_project_sharing.sql  012_add_inbox_project_flag.sql  013_repair_inbox_project_flags.sql  014_add_password_setup_tokens.sql  015_add_user_profile_avatar.sql  016_add_workspaces.sql  017_add_project_workspace_icons.sql  018_set_inbox_project_icons.sql  019_add_instance_config.sql  020_add_public_instance_metadata.sql  021_add_email_smtp_config.sql  (+27 more)
docs/: api.md  architecture.md  release-smoke-test.md  testing.md
scripts/: backup.sh  nia-todo-admin-password-reset.sh  nia-todo-backup.sh  nia-todo-restore.sh  nia-todo-server-update.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: android.json  default.json  windows-passkeys.json
src-tauri/desktop-shell/: index.html
src-tauri/linux/: nia-todo-desktop.desktop
src-tauri/permissions/autogenerated/: desktop_clear_server_url.toml  desktop_consume_pending_oidc_callback.toml  desktop_download_attachment.toml  desktop_get_app_version.toml  desktop_get_settings.toml  desktop_open_url.toml  desktop_passkey_authenticate.toml  desktop_passkey_register.toml  desktop_request_notification_permission.toml  desktop_schedule_reminders.toml  desktop_set_hotkey.toml  desktop_set_server_url.toml  desktop_set_setting.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: nsis-hooks.nsh
web/: admin.html  index.html  manifest.json  set-password.html  setup.html  sw.js
(+164 files in other folders)
