[package]
name = "nia-todo-desktop"
version = "2.6.3"
description = "Windows desktop wrapper for nia-todo"
authors = ["Tobias Kneidl"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "nia_todo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = ["tray-icon"] }
url = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
base64 = "0.22"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Networking_WindowsWebServices"] }
winreg = "0.55"
