[package]
name = "nia-todo-desktop"
version = "3.0.2"
description = "Desktop wrapper for nia-todo"
authors = ["Tobias Kneidl"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "nia_todo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = ["tray-icon"] }
url = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "blocking"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "android")))'.dependencies]
ashpd = { version = "0.13.12", features = ["global_shortcuts"] }
futures-util = "0.3"
gtk = "0.18"

[target.'cfg(windows)'.dependencies]
base64 = "0.22"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Networking_WindowsWebServices"] }
winreg = "0.55"
